--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "dependencies": {
+    "@clack/prompts": "^0.10.0",
+    "zod": "^3.24.2"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
