--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "my-model-context",
-  "module": "index.ts",
-  "type": "module",
-  "private": true,
-  "dependencies": {
-    "@clack/prompts": "^0.10.0",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  }
+    "name": "my-model-context",
+    "module": "index.ts",
+    "type": "module",
+    "private": true,
+    "dependencies": {
+        "@clack/prompts": "^0.10.0",
+        "zod": "^3.24.2"
+    },
+    "devDependencies": {
+        "@types/bun": "latest",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.5.0",
+        "prettier": "3.5.3"
+    },
+    "peerDependencies": {
+        "typescript": "^5"
+    },
+    "scripts": {
+        "prepare": "husky"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
+    }
 }
