--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,17 @@ jobs:
               with:
                   bun-version: latest
 
+            - name: Setup Node.js for npm publishing
+              uses: actions/setup-node@v4
+              with:
+                  node-version: '20'
+                  registry-url: 'https://registry.npmjs.org/'
+
             - name: Install dependencies
               run: bun install
+
+            - name: Fix package.json
+              run: npm pkg fix
 
             - name: Build
               run: bun run build
