--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,25 +11,25 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - name: Setup Bun
-              uses: oven-sh/setup-bun@v1
-              with:
-                  bun-version: latest
-
-            - name: Setup Node.js for npm publishing
+            - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
                   node-version: '20'
                   registry-url: 'https://registry.npmjs.org/'
 
+            - name: Setup pnpm
+              uses: pnpm/action-setup@v3
+              with:
+                  version: latest
+
             - name: Install dependencies
-              run: bun install
+              run: pnpm install
 
             - name: Fix package.json
               run: npm pkg fix
 
             - name: Build
-              run: bun run build
+              run: pnpm run build
 
             - name: Publish to npm
               run: npm publish --access public
