--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "0.0.2-beta",
     "description": "Smooth management of local MCP configs",
     "main": "dist/index.js",
-    "module": "index.ts",
-    "type": "module",
+    "type": "commonjs",
     "private": false,
     "bin": {
         "my-model-context": "./dist/index.js"
@@ -14,9 +13,9 @@
     ],
     "scripts": {
         "prepare": "husky",
-        "build": "bun build ./index.ts --outdir ./dist --target node --format esm",
+        "build": "tsc && node esbuild.config.js",
         "start": "node dist/index.js",
-        "dev": "bun run index.ts",
+        "dev": "tsx index.ts",
         "format": "prettier --write .",
         "postbuild": "chmod +x dist/index.js"
     },
@@ -25,10 +24,13 @@
         "zod": "^3.24.2"
     },
     "devDependencies": {
-        "@types/bun": "latest",
+        "@types/node": "^20.11.24",
+        "esbuild": "^0.20.2",
         "husky": "^9.1.7",
         "lint-staged": "^15.5.0",
-        "prettier": "3.5.3"
+        "prettier": "3.5.3",
+        "tsx": "^4.7.1",
+        "typescript": "^5.3.3"
     },
     "peerDependencies": {
         "typescript": "^5"
@@ -37,6 +39,6 @@
         "**/*": "prettier --write --ignore-unknown"
     },
     "engines": {
-        "bun": ">=1.0.0"
+        "node": ">=18.0.0"
     }
 }
