--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "my-model-context",
-    "version": "0.0.2-beta",
+    "version": "0.0.3-beta",
     "description": "Smooth management of local MCP configs",
     "main": "dist/index.js",
     "type": "commonjs",
     "private": false,
     "bin": {
-        "my-model-context": "./dist/index.js"
+        "my-model-context": "dist/index.js"
     },
     "files": [
         "dist"
