--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
     "name": "my-model-context",
-    "version": "0.0.4-beta",
+    "version": "0.0.5-beta",
     "description": "Smooth management of local MCP configs",
+    "keywords": [
+        "mcp",
+        "model-context-protocol"
+    ],
     "main": "dist/index.js",
     "type": "commonjs",
     "private": false,
@@ -21,6 +25,7 @@
     },
     "dependencies": {
         "@clack/prompts": "^0.10.0",
+        "chalk": "^5.4.1",
         "zod": "^3.24.2"
     },
     "devDependencies": {
